Keep cart items in sync with updated product images

--- a/shirt2.html
+++ b/shirt2.html
@@ -721,6 +721,10 @@
 
             if (existingItem) {
                 existingItem.quantity += 1;
+                existingItem.name = product.name;
+                existingItem.price = product.price;
+                existingItem.image = product.image;
+                existingItem.size = selectedSize;
             } else {
                 cart.push({
                     id: itemId,
