--- a/index.html
+++ b/index.html
@@ -605,6 +605,9 @@
 
             if (existingItem) {
                 existingItem.quantity += 1;
+                existingItem.name = product.name;
+                existingItem.price = product.price;
+                existingItem.image = product.image;
             } else {
                 cart.push({
                     id: itemId,
