Update shirt images

--- a/index.html
+++ b/index.html
@@ -484,16 +484,14 @@
 
     <div class="products">
         <a href="shirt2.html">
-            <img src="shirt2.png" alt="Shirt 2 - 2019 ink">
+            <img src="001.png" alt="Shirt 2 - 2019 ink">
             <div class="product-info">
-                <div class="product-name">Shirt 2</div>
                 <div class="product-price">$30.00</div>
             </div>
         </a>
         <a href="shirt3.html">
-            <img src="shirt3.png" alt="Shirt 3 - 2019 ink">
+            <img src="002.png" alt="Shirt 3 - 2019 ink">
             <div class="product-info">
-                <div class="product-name">Shirt 3</div>
                 <div class="product-price">$30.00</div>
             </div>
         </a>
@@ -526,8 +524,8 @@
 
         // Product data
         const products = {
-            'shirt2': { name: 'Shirt 2', price: 30, image: 'shirt2.png' },
-            'shirt3': { name: 'Shirt 3', price: 30, image: 'shirt3.png' }
+            'shirt2': { name: 'Shirt 2', price: 30, image: '001.png' },
+            'shirt3': { name: 'Shirt 3', price: 30, image: '002.png' }
         };
 
         // Initialize cart on page load
