--- a/shirt2.html
+++ b/shirt2.html
@@ -575,9 +575,9 @@
     <div class="container">
         <div class="product-grid">
             <div class="product-images">
-                <img src="shirt2.png" alt="Shirt 2 Design - Main" class="main-image" id="mainImage">
+                <img src="001.png" alt="Shirt 2 Design - Main" class="main-image" id="mainImage">
                 <div class="thumbnail-grid">
-                    <img src="shirt2.png" alt="Shirt 2 - Front" class="thumbnail" onclick="changeImage(this)">
+                    <img src="001.png" alt="Shirt 2 - Front" class="thumbnail" onclick="changeImage(this)">
                 </div>
             </div>
             
@@ -639,7 +639,7 @@
         }
 
         // Product data
-        const product = { name: 'Shirt 2', price: 30, image: 'shirt2.png' };
+        const product = { name: 'Shirt 2', price: 30, image: '001.png' };
 
         // Initialize on page load
         document.addEventListener('DOMContentLoaded', function() {
