--- a/shirt3.html
+++ b/shirt3.html
@@ -575,9 +575,9 @@
     <div class="container">
         <div class="product-grid">
             <div class="product-images">
-                <img src="shirt3.png" alt="Shirt 3 Design - Main" class="main-image" id="mainImage">
+                <img src="002.png" alt="Shirt 3 Design - Main" class="main-image" id="mainImage">
                 <div class="thumbnail-grid">
-                    <img src="shirt3.png" alt="Shirt 3 - Front" class="thumbnail" onclick="changeImage(this)">
+                    <img src="002.png" alt="Shirt 3 - Front" class="thumbnail" onclick="changeImage(this)">
                 </div>
             </div>
             
@@ -638,7 +638,7 @@
             localStorage.setItem('cart', JSON.stringify(cart));
         }
 
-        const product = { name: 'Shirt 3', price: 30, image: 'shirt3.png' };
+        const product = { name: 'Shirt 3', price: 30, image: '002.png' };
 
         document.addEventListener('DOMContentLoaded', function() {
             cart = loadCart();
